feat: 주석 추가 및 프런트 UI변경에 다른 수정